--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
         <version>2.4.4</version>
-        <relativePath>../.m2/repository/org/springframework/boot/spring-boot-starter-parent/2.4.4</relativePath>
+        <!--relativePath>../.m2/repository/org/springframework/boot/spring-boot-starter-parent/2.4.4</relativePath-->
     </parent>
     <groupId>com.example</groupId>
     <artifactId>demo</artifactId>
